syntax = "proto3";
package comdex.auctionsV2.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "comdex/liquidationsV2/v1beta1/liquidate.proto";

option go_package = "github.com/comdex-official/comdex/x/auctionsV2/types";

message AuctionHistorical{
  uint64 auction_id = 1 [
    (gogoproto.moretags) = "yaml:\"auction_id\""
  ];
  Auction auction_historical=2[
    (gogoproto.moretags) = "yaml:\"auction_historical\""
  ];
  comdex.liquidationsV2.v1beta1.LockedVault locked_vault= 3[
    (gogoproto.moretags) = "yaml:\"locked_vault\""
  ];
  
}

message Auction{
  uint64 auction_id = 1 [
    (gogoproto.moretags) = "yaml:\"auction_id\""
  ];
  cosmos.base.v1beta1.Coin collateral_token = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collateral_token\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin debt_token = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"inflow_token_target_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  uint64 active_bidding_id = 4 [
    (gogoproto.moretags) = "yaml:\"active_bidding_id\""
  ];
  repeated bidOwnerMapping bidding_ids = 5 [
    (gogoproto.moretags) = "yaml:\"bidding_ids\""
  ];

  // price indicator only for dutch auctions
  string collateral_token_auction_price = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_auction_price\""
  ];
  string collateral_token_oracle_price = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_oracle_price\""
  ];

  string debt_token_oracle_price = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"inflow_token_oracle_price\""
  ];
  uint64 locked_vault_id = 10 [
    (gogoproto.moretags) = "yaml:\"locked_vault_id\""
  ];
  google.protobuf.Timestamp start_time = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  google.protobuf.Timestamp end_time = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];

  uint64 app_id = 13 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  bool auction_type = 14 [
    (gogoproto.customname) = "AuctionType",
    (gogoproto.moretags) = "yaml:\"auction_type\""];

  uint64 collateral_asset_id = 15 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_id\""
  ];
  uint64 debt_asset_id = 16 [
    (gogoproto.moretags) = "yaml:\"debt_asset_id\""
  ];
  string bonus_amount = 17 [
    (gogoproto.moretags) = "yaml:\"bonus_amount\"",
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];

  string collateral_token_initial_price = 18 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collateral_token_initial_price\""
  ];

}

 message bidOwnerMapping{
   uint64 bid_id = 1;
   string bid_owner = 2;
 }

message LimitBidProtocolData{
  uint64 collateral_asset_id = 1 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_id\""
  ];
  uint64 debt_asset_id = 2 [
    (gogoproto.moretags) = "yaml:\"debt_asset_id\""
  ];
  string bid_value = 3 [
    (gogoproto.moretags) = "yaml:\"bid_value\"",
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];

  string max_discount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_discount\""
  ];
}

message LimitBidProtocolDataForQuery{
  uint64 collateral_asset_id = 1 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_id\""
  ];
  uint64 debt_asset_id = 2 [
    (gogoproto.moretags) = "yaml:\"debt_asset_id\""
  ];
  string bid_value = 3 [
    (gogoproto.moretags) = "yaml:\"bid_value\"",
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];

  string max_discount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_discount\""
  ];
  string collateral_asset_denom = 5 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_denom\""
  ];
  string debt_asset_denom = 6 [
    (gogoproto.moretags) = "yaml:\"debt_asset_denom\""
  ];
}

message LimitBidProtocolDataWithUserForQuery{
  uint64 collateral_asset_id = 1 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_id\""
  ];
  uint64 debt_asset_id = 2 [
    (gogoproto.moretags) = "yaml:\"debt_asset_id\""
  ];
  string bid_value = 3 [
    (gogoproto.moretags) = "yaml:\"bid_value\"",
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];

  string max_discount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_discount\""
  ];
  string collateral_asset_denom = 5 [
    (gogoproto.moretags) = "yaml:\"collateral_asset_denom\""
  ];
  string debt_asset_denom = 6 [
    (gogoproto.moretags) = "yaml:\"debt_asset_denom\""
  ];
  string user_bid_value = 7 [
    (gogoproto.moretags) = "yaml:\"user_bid_value\"",
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.Int"
  ];
}